ドロップダウンメニューが隠れてしまう問題を解消

--- a/_login.html
+++ b/_login.html
@@ -2,6 +2,6 @@
   <a class="dropdown-toggle" data-toggle="dropdown" href="#login">
     <i class="fa fa-user fa-lg"> </i>Login<b class="caret"></b>
   </a>
-  <div id="root" class="dropdown-menu pull-right" style="padding: 0; margin: 0; border: none;"></div>
+  <div id="root" class="dropdown-menu pull-right" style="padding: 0; margin: 0; border: none; position: relative;"></div>
 </span>
 
