--- a/_logout.html
+++ b/_logout.html
@@ -2,7 +2,7 @@
   <a class="dropdown-toggle" data-toggle="dropdown" href="#User">
     <i class="fa fa-user fa-lg"> </i><span class="name"></span><b class="caret"></b>
   </a>
-  <ul class="dropdown-menu pull-right">
+  <ul class="dropdown-menu pull-right" style="position: relative;">
   	<li><a id="logout" href="#logout">Logout</a></li>
   	<li><a href="user_main.html">Profile</a></li>
   </ul>
